# bsp-demo

./: .gitignore  Mondholte_tumoren__dashboardversie__Major_Version_3__3-0-0__extended.xlsx  app.py  config.py  data.py  pyproject.toml  requirements.txt  utils.py
plotting/: plotly_barchart.py
tabs/: tab_general.py  tab_invasion_margins.py  tab_patient_list.py  tab_staging.py  tab_tumor_profile.py
