[tool.poetry]
name = "tiro-bsp"
version = "1.0.0"
description = "Dashboard BSP demo day"
authors = ["Charlotte De Vlieghere <charlotte.devlieghere@tiro.health>"]
package-mode = false  

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
streamlit = "^1.27.0"
pandas = "^2.2.0"       # Modernized to work with Python 3.12+
plotly = "^5.18.0"
pillow = "^10.0.0"      # Modernized to avoid the PEP 517 build error
openpyxl = "*"
xlrd = "^2.0.1"
xlsxwriter = "*"
pydantic = "^2.0"
click = "^8"
tqdm = "*"
emoji = "*"
protobuf = "3.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"