[tool.poetry]
name = "tiro-bsp"
version = "1.0.0"
description = "Dashboard BSP demo day"
authors = ["Charlotte De Vlieghere <charlotte.devlieghere@tiro.health>"]
package-mode = false  

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
streamlit = "^1.27.0"
pandas = "^2.2.0"
plotly = "^5.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"