[tool.poetry]
name = "tiro-bsp"
version = "1.0.0"
description = "Dashboard BSP demo day"
authors = ["Charlotte De Vlieghere <charlotte.devlieghere@tiro.health>"]
package-mode = false  

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "1.55.0"
pandas = "2.3.3"
plotly = "5.24.1"
numpy = "2.2.6"
openpyxl = "3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"